# GEMSGUI

./: .cvsignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Info.plist  Makefile  Makefile.MinGW  README.md  Run_Reactoro.md  Run_Reaktoro.md  Self-extractor-GEMS3_1-settings.xml  azure-pipelines.yml  conda-install-dependencies.bat  conda-install-dependencies.sh  environment.devenv.yml  environment.yml  gems-w32-install.nsi  gems3-w32-install.nsi  gems3.spec  gems3_qt.pro  gems3gui.pro  gems4gui.pro  gems_qt.pro  gems_release.pro  img.qrc  install-dependencies.sh  install-thirdparty.sh  makecl.bat  makew_installer.bat  objmoc_ld_script  qmake_no_qt.bat  qmake_qt_lib.bat  qmake_release.bat
App/: CMakeLists.txt  main.cpp
GUI/: CMakeLists.txt  GUI.qrc
GUI/Dataman/: Dataman.pri  array.h  config.cpp  config.h  gstring.cpp  gstring.h  jsonconfig.cpp  jsonconfig.h  t_print.cpp  t_print.h  t_read.cpp  t_read.h  v_2module.cpp  v_2module.h  v_dbfile.h  v_dbm.cpp  v_dbm.h  v_dbm1.cpp  v_dbm2.cpp  v_dbm_file.cpp  v_dbm_file.h  v_ejdb.cpp  v_ejdb.h  v_ejdb_file.cpp  v_ejdb_file.h  v_file.cpp  v_file.h  v_json.cpp  v_json_1.h  v_module.cpp  v_module.h  v_object.cpp  v_object.h  v_user.cpp  v_user.h  v_vals.cpp  v_vals.h  v_vals_impl.h
GUI/Dialogs4/: AboutDialog4.ui  AutoPhaseDialog.cpp  AutoPhaseDialog.h  AutoPhaseDialog4.ui  CalcCheckDialog.cpp  CalcCheckDialog.h  CalcCheckDialog4.ui  CalcDialog.cpp  CalcDialog.h  CalcDialog4.ui  ChangeKeyDialog.cpp  ChangeKeyDialog.h  ChangeKeyDialog4.ui  ComposWizard.cpp  ComposWizard.h  ComposWizard4.ui  DCompWizard.cpp  DCompWizard.h  DCompWizard4.ui  Dialogs4.pri  DirNameDialog.cpp  DirNameDialog.h  DirNameDialog.ui  DualThWizard.cpp  DualThWizard.h  DualThWizard4.ui  ElementsDialog.cpp  ElementsDialog.h  ElementsDialog4.ui  EquatSetupWidget.cpp  EquatSetupWidget.h  EquatSetupWidget4.ui  ExcludeFillDialog.cpp  ExcludeFillDialog.h  GEM2MTWizard.cpp  GEM2MTWizard.h  GEM2MTWizard4.ui  GemsMainMenus.cpp  GemsMainThread.cpp  GemsMainWindow.cpp  (+77 more)
GUI/Icons/GG_highres_tifs/: CalculateBCCIcon.tif  CalculateGEMIcon.tif  CalculateRecordDataIcon.tif  CancelIcon.tif  ComposModuleIcon.tif  DCompModuleIcon.tif  DatabaseModeIcon.tif  DeleteCurrentRecordIcon.tif  DetailedCSDIcon.tif  DisplayNextRecordIcon.tif  DisplayPrevRecordIcon.tif  DualThModuleIcon.tif  EquilibriumModeIcon.tif  ErrorMessageIcon.tif  GEM2MTModuleIcon.tif  GtDemoModuleIcon.tif  HomeInHelpMenu.tif  ICompModuleIcon.tif  InfoMessageIcon.tif  ModelingProjectIcon.tif  NewCloneRecordIcon.tif  NewCreateRecordIcon.tif  PhaseDiagramModuleIcon.tif  PhaseModuleIcon.tif  PlotDataOnGraphIcon.tif  PrintDataToFileIcon.tif  ProcessModuleIcon.tif  QuestionMessageIcon.tif  RTparmModuleIcon.tif  ReacDCModuleIcon.tif  RecipeWizardIcon.tif  RemakeRecordIcon.tif  SDrefModuleIcon.tif  SaveCurrentRecordIcon.tif  SearchBackwardIcon.tif  SearchForwardIcon.tif  SelectDisplayRecordIcon.tif  SetKeyTemplateIcon.tif  ShowFilesIcon.tif  ShowGEMResultsIcon.tif  (+6 more)
GUI/Icons/GG_sources_ai/: CalculateBCCIcon.ai  CalculateBCCIcon24.ai  CalculateGEMIcon.ai  CalculateGEMIcon24.ai  CalculateRecordDataIcon.ai  CalculateRecordDataIcon24.ai  CancelIcon.ai  CancelIcon24.ai  ComposModuleIcon.ai  ComposModuleIcon24.ai  DCompModuleIcon.ai  DCompModuleIcon24.ai  DatabaseModeIcon.ai  DatabaseModeIcon24.ai  DeleteCurrentRecordIcon.ai  DeleteCurrentRecordIcon24.ai  DetailedCSDIcon.ai  (+76 more)
GUI/QWT/: qwt.pri  qwt_abstract_scale.h  qwt_abstract_scale_draw.cpp  qwt_abstract_scale_draw.h  qwt_abstract_slider.cpp  qwt_abstract_slider.h  qwt_analog_clock.cpp  qwt_analog_clock.h  qwt_clipper.cpp  qwt_clipper.h  qwt_color_map.cpp  qwt_compass.cpp  qwt_counter.cpp  qwt_curve_fitter.cpp  qwt_dial.cpp  qwt_dial.h  qwt_double_range.cpp  qwt_double_range.h  qwt_dyngrid_layout.cpp  qwt_event_pattern.cpp  qwt_knob.cpp  qwt_knob.h  qwt_legend_item.h  qwt_legend_itemmanager.h  qwt_math.h  qwt_matrix_raster_data.cpp  qwt_null_paintdevice.h  qwt_painter.cpp  qwt_painter.h  qwt_panner.cpp  qwt_picker.cpp  qwt_picker.h  qwt_plot.h  qwt_plot_canvas.cpp  qwt_plot_canvas.h  qwt_plot_curve.cpp  qwt_plot_curve.h  qwt_plot_dict.cpp  qwt_plot_directpainter.cpp  qwt_plot_directpainter.h  (+48 more)
GUI/Services4/: Services4.pri  Services4_old.pri  calcthread.h  graph.cpp  graph.h  graph_window.cpp  graph_window.h  help.cpp  help.h  main.cpp  model_bson.cpp  model_bson.h  model_tree.cpp  model_tree.h  model_w.cpp  model_w.h  module_w.cpp  module_w.h  page_f.cpp  page_f.h  page_w.cpp  page_w.h  pshape.cpp  pshape.h  qwtplot.cpp  qwtplot.h  service.cpp  service.h  table_model.cpp  table_model.h  units.cpp  units.h  visor.cpp  visor.h  zmqclient.cpp  zmqclient.h
GUI/charts/: GraphDialog.cpp  GraphDialog.h  GraphDialog4N.ui  GraphDialogN.cpp  GraphDialogN.h  LegendDialog.cpp  LegendDialog4N.ui  LegendDialogN.cpp  LegendDialogN.h  SymbolDialog.cpp  SymbolDialog4N.ui  SymbolDialogN.cpp  SymbolDialogN.h  chart_model.cpp  chart_model.h  chart_view.cpp  chart_view.h  charts.pri  from_jsonio.h  graph_data.cpp  graph_data.h  markershapes.cpp  markershapes.h  plot_model.cpp  plot_model.h
GUI/tcejdb/: tcejdb.pri
Modules/: CMakeLists.txt  Modules.pri  filters_data.h  m_compos.cpp  m_compos.h  m_const.cpp  m_const.h  m_dcomp.cpp  m_dcomp.h  m_dcomp2.cpp  m_dualth.cpp  m_dualth.h  m_dualthc.cpp  m_gem2mt.cpp  m_gem2mt.h  m_gem2mtbox.cpp  m_gem2mtc.cpp  m_gem2mtfor.cpp  m_gem2mtt.cpp  m_gtdemo.cpp  m_gtdemo.h  m_icomp.cpp  m_icomp.h  m_integ.h  m_param.cpp  m_param.h  m_param_new.cpp  m_phase.cpp  m_phase.h  m_phase2.cpp  m_phase_new.h  m_prfget.cpp  m_prfget2.cpp  m_proces.cpp  m_proces.h  m_reac2.cpp  m_reacdc.cpp  m_reacdc.h  m_rtparm.cpp  m_rtparm.h  (+26 more)
Modules/Numerics/: Numerics.pri  jama_svd.h  tnt_array2d_utils.h  tnt_math_utils.h
Modules/Submods/: Submods.pri  ms_calc.h  ms_mtparm.cpp  ms_mtparm.h  ms_muleq.cpp  ms_muload.cpp  ms_multi.cpp  ms_multi_new.cpp  ms_multi_new.h  ms_mupmph.cpp  ms_rmults.cpp  ms_rmults.h  ms_sysbc.cpp  ms_system.cpp  ms_system.h  node_gui.cpp  node_gui.h  nodearray_gui.cpp  nodearray_gui.h  particlearray.cpp  particlearray.h  stepwise.h  v_smodhand.h
(+2508 files in other folders)
